sessions/25-admission-control-and-policy/subsessions/04-kyverno/01-require-app-labels.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-message-board-labels
spec:
  validationFailureAction: Audit
  rules:
    - name: require-owner-and-app
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: "Deployments must include app.kubernetes.io/name and owner labels."
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
              owner: "?*"
